add logic of form

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style/style.css">
+    <script src="/app.js" defer></script>
 </head>
-<body>
+<body class="body">
     <div class="container-form">
-        <form action="#">
+        <form class="form" action="#">
             <p class="head">Add new book</p>
              <input type="text" name="book-title" placeholder="title" id="title" value="">
              <input type="text" name="book-author" id="author" placeholder="author">
@@ -25,13 +26,54 @@
     <header>
         <div class="container-header">
             <h1>Library</h1>
-            <div>
-                <h2><span>+</span> add</h2>
-            </div>
+            <button class="add">+ add</button>
         </div>
     </header>
     <div class="main-container">
         <main>
+            <div class="container-piece">
+                <p>Book</p>
+                <p>amir heydari</p>
+                <p>333</p>
+                <button>read</button>
+            </div>
+            <div class="container-piece">
+                <p>Book</p>
+                <p>amir heydari</p>
+                <p>333</p>
+                <button>read</button>
+            </div>
+            <div class="container-piece">
+                <p>Book</p>
+                <p>amir heydari</p>
+                <p>333</p>
+                <button>read</button>
+            </div>
+            <div class="container-piece">
+                <p>Book</p>
+                <p>amir heydari</p>
+                <p>333</p>
+                <button>read</button>
+            </div>
+            <div class="container-piece">
+                <p>Book</p>
+                <p>amir heydari</p>
+                <p>333</p>
+                <button>read</button>
+            </div>
+            <div class="container-piece">
+                <p>Book</p>
+                <p>amir heydari</p>
+                <p>333</p>
+                <button>read</button>
+            </div>
+
+            <div class="container-piece">
+                <p>Book</p>
+                <p>amir heydari</p>
+                <p>333</p>
+                <button>read</button>
+            </div>
             <div class="container-piece">
                 <p>Book</p>
                 <p>amir heydari</p>
